--- a/crates/ruma-events/Cargo.toml
+++ b/crates/ruma-events/Cargo.toml
@@ -33,7 +33,7 @@ unstable-msc3246 = ["unstable-msc3927"]
 unstable-msc3381 = ["unstable-msc1767"]
 unstable-msc3401 = []
 unstable-msc3488 = ["unstable-msc1767"]
-unstable-msc3489 = ["unstable-msc1767"]
+unstable-msc3489 = ["unstable-msc1767", "unstable-msc3488"]
 unstable-msc3551 = ["unstable-msc3956"]
 unstable-msc3552 = ["unstable-msc3551"]
 unstable-msc3553 = ["unstable-msc3552"]
@@ -63,7 +63,10 @@ js_int = { workspace = true, features = ["serde"] }
 js_option = "0.1.0"
 percent-encoding = "2.1.0"
 pulldown-cmark = { version = "0.9.1", default-features = false, optional = true }
-regex = { version = "1.5.6", default-features = false, features = ["std", "perf"] }
+regex = { version = "1.5.6", default-features = false, features = [
+    "std",
+    "perf",
+] }
 ruma-common = { workspace = true }
 ruma-html = { workspace = true, optional = true }
 ruma-identifiers-validation = { workspace = true }
